# kdeartwork

./: .gitignore  .gitmodules  Doxyfile  acinclude.m4  config.h  config.h.in  config.status  configure.files  configure.in  kdeartwork.kdevelop  kdeartwork.kdevses  libtool
kscreensaver/kdesavers/: Makefile.am
kwin-styles/: Makefile.am
kwin-styles/fahrenheit/: AUTHORS  BUGS  INSTALL  Makefile.am  README  configure.in.in
kwin-styles/fahrenheit/client/: Makefile.am  fahrenheit.desktop  fahrenheitclient.cc  fahrenheitclient.h
kwin-styles/fahrenheit/client/pics/: Makefile.am
styles/: Makefile.am
styles/baghira/: Makefile.am
styles/baghira/starter/: starter.cpp  starter.cpp~
styles/baghira/style/: baghira.cpp  baghira.cpp~
styles/polyester/: Makefile.am
styles/polyester/client/: polyester.cc
styles/polyester/client/config/: polyesterconfig.cc
styles/polyester/style/: polyester.cpp
styles/polyester/style/config/: polyesterconf.cpp
styles/qindustrial/: Industrial.kcsrc  Makefile.am  checkbox-mixed.xpm  checkbox-off.xpm  checkbox-on.xpm  common.c  common.h  menu-check-11.xpm  menu-check-13.xpm  menu-check-8.xpm  menu-checkbox-mixed.xpm  menu-checkbox-off.xpm  menu-checkbox-on.xpm  menu-radio-mixed.xpm  menu-radio-off.xpm  menu-radio-on.xpm  plugin.cpp  qindustrial.cpp  qindustrial.desktop  qindustrial.h  qindustrial.themerc  qt-theme.txt  radio-mixed.xpm  radio-off.xpm  radio-on.xpm  table-checkbox-mixed.xpm  table-checkbox-off.xpm  table-checkbox-on.xpm  windecoration.cpp  windecoration.h
